--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -55,7 +55,7 @@
                     <div class="icon excel"><i class="fas fa-file-excel"></i></div>
                     <h3>Excel to PDF</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('pdf-to-jpg', 'PDF to JPG')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/'">
                     <div class="icon image"><i class="fas fa-file-image"></i></div>
                     <h3>PDF to JPG</h3>
                 </div>
