--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -31,7 +31,7 @@
 
             <h3 class="subcategory-title">Standard Converters</h3>
             <div class="tools-grid">
-                <div class="tool-card" onclick="openTool('pdf-to-word', 'PDF to Word')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/pdf-to-word/'">
                     <div class="icon word"><i class="fas fa-file-word"></i></div>
                     <h3>PDF to Word</h3>
                 </div>
@@ -39,7 +39,7 @@
                     <div class="icon word"><i class="fas fa-file-word"></i></div>
                     <h3>Word to PDF</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('pdf-to-powerpoint', 'PDF to PowerPoint')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/pdf-to-powerpoint/'">
                     <div class="icon ppt"><i class="fas fa-file-powerpoint"></i></div>
                     <h3>PDF to PowerPoint</h3>
                 </div>
@@ -47,7 +47,7 @@
                     <div class="icon ppt"><i class="fas fa-file-powerpoint"></i></div>
                     <h3>PowerPoint to PDF</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('pdf-to-excel', 'PDF to Excel')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/pdf-to-excel/'">
                     <div class="icon excel"><i class="fas fa-file-excel"></i></div>
                     <h3>PDF to Excel</h3>
                 </div>
@@ -67,11 +67,11 @@
                     <div class="icon code"><i class="fas fa-code"></i></div>
                     <h3>HTML to PDF</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('pdf-to-pdfa', 'PDF to PDF/A')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/pdf-to-pdfa/'">
                     <div class="icon pdf"><i class="fas fa-file-pdf"></i></div>
                     <h3>PDF to PDF/A</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('pdf-to-html', 'PDF to HTML')">
+                <div class="tool-card" onclick="window.location.href='/pdf-conversions/pdf-to-html/'">
                     <div class="icon code"><i class="fas fa-code"></i></div>
                     <h3>PDF to HTML</h3>
                 </div>
