feat:add new compression method

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -98,11 +98,11 @@
         <div class="category-section">
             <h2 class="category-title">2. Compression & Optimization</h2>
             <div class="tools-grid">
-                <div class="tool-card" onclick="openTool('compress-pdf', 'Compress PDF')">
+                <div class="tool-card" onclick="window.location.href='/optimizer/compress-pdf-ui/'">
                     <div class="icon compress"><i class="fas fa-compress-arrows-alt"></i></div>
                     <h3>Compress PDF</h3>
                 </div>
-                <div class="tool-card" onclick="openTool('image-compression', 'Image Compression')">
+                <div class="tool-card" onclick="window.location.href='/optimizer/compress-image-ui/'">
                     <div class="icon compress"><i class="fas fa-compress"></i></div>
                     <h3>Image Compression</h3>
                 </div>
